# 40kAI

./: README.md  board.txt  data.sh  genDisplay.py  hyperparams.json  play.py  play.sh  requirements.txt  train.py  train.sh  trainRes.txt  unit.py  val.py  val.sh
data_collector/unit_data/: addData.py  links.json  scrape.sh  scrapy.cfg
gui/: Application.cpp  Application.h  CMakeLists.txt  GUI.desktop  README.md  about.txt  contact.txt  gettingStarted.txt  help.cpp  main  main.c  main.cpp  play.cpp  popup.cpp  units.cpp  units.txt  warn.cpp
gui/include/: Application.h  help.h  play.h  popup.h  units.h  warn.h
gym_mod/: setup.py
gym_mod/envs/: __init__.py  warhamEnv.py
gym_mod/gym_mod/: __init__.py
installation/: ascii-icon.txt  install  install.c  makefile
model/: DQN.py  memory.py  utils.py
models/: data_18-799760.json  data_28-58067.json  data_3-557377.json  data_30-330877.json  data_38-892245.json  data_42-497827.json  data_46-202815.json  model-2024-4-22-23-19-18-683323.pickle  model-2024-4-23-14-18-42-848142.pickle  model-2024-4-29-13-30-29-965019.pickle  model-2024-4-29-22-37-7-794850.pickle
models/M:Orks_vs_P:Orks/: model-44-926319.pickle  model-48-44351.pickle  model-48-44351.pth
models/M:Orks_vs_P:Space_Marine/: model-24-913938.pickle  model-35-743530.pickle  model-47-844032.pickle
models/M:Sisters_of_Battle_vs_P:Sisters_of_Battle/: model-25-585298.pickle  model-25-585298.pth
models/M:Space_Marine_vs_P:Space_Marine/: model-11-514618.pickle  model-11-514618.pth  model-18-67459.pickle  model-18-67459.pth  model-18-799760.pickle  model-18-799760.pth  (+33 more)
val/: val.py  val.sh
(+21 files in other folders)
